# SDR_POC_Pelengator-code-supplement

./: .gitignore  LICENSE  README.md  pyproject.toml
data/tampere_extract/: README.md
experiments/poc_pelengator/: ablate_fingerprint.py  ablate_fingerprint_nonlinear.py  analyze_conditioning.py  analyze_field_prior.py  analyze_mismatch.py  config.yaml  plot_a5_summary.py  run_a4_acceptance.py  run_multipath.py  run_nonlinear_gate.py  run_proxy.py  train_fingerprint.py  write_manifest.py
experiments/poc_pelengator/models/: mavic_pro_fingerprint.pkl
experiments/poc_pelengator/results/: a3_ablation_nonlinear_report.json  a3_ablation_report.json  a3_fingerprint_report.json  a4_acceptance_report.json  a5_proxy_log.jsonl  a5_proxy_report.json  conditioning.json  field_prior.json  manifest.json  mismatch_sensitivity.json  multipath_sensitivity.json  nonlinear_gate_report.json
src/sdr_kunchenko/: __init__.py
src/sdr_kunchenko/doa/: __init__.py  averaging.py  differential.py  null_detector.py
src/sdr_kunchenko/rf/: __init__.py  dual_channel_simulator.py  fingerprint.py  packet_detector.py
tests/: test_doa.py  test_dual_channel_simulator.py  test_fingerprint.py  test_packet_detector.py
