[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdr-poc-pelengator-supplement"
version = "1.0.0"
description = "Code supplement: dual-channel SDR direction finder for DJI Mavic signals (quantitative error budget on open data)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Serhii V. Zabolotnii" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "cloudpickle>=3.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
